# src_platform_clip-usb-clt

./: CHANGELOG  Makefile.in  README.md  configure  configure.ac
man/: Makefile.am  Makefile.in  clip_usb_clt.8
src/: Makefile.am  Makefile.in  usbclt.c
