# SPDX-License-Identifier: LGPL-2.1-or-later
# Copyright © 2007-2018 ANSSI. All Rights Reserved.
bin_PROGRAMS = usbclt
usbclt_SOURCES = usbclt.c
usbclt_LDFLAGS = 
usbclt_CPPFLAGS= -O -Wall -Wextra -Wcast-qual -Wstrict-prototypes -Werror -fno-common -DUSB_SOCK_PATH=\"/var/run/usb\"
datadir = @prefix@/share/clip-usb-clt
